--- a/style.css
+++ b/style.css
@@ -37,17 +37,23 @@ body {
     padding-left: 10px;
 }
 
-.nav {
-    /* width: 230px;
-    padding-top: 48px;
-    padding-left: 50px; */
-    
-}
-
 .socials {
     padding: 0; 
 }
 
 .socials_1 {
     padding-left: 15px;
+}
+
+.section_1 {
+    width: 100%;
+    height: 680px;
+    background-color: #4A2B33;
+    display: flex;
+    justify-content: center;
+}
+
+.ambient_1 {
+    width: 1328px;
+    height: 644px;
 }
