--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 .nav_link {
     color: #D27487;
     text-decoration: none;
-    font-family: "Inter";
+    font-family: 'Inter', sans-serif;
     padding-left: 10px;
 }
 
@@ -54,6 +54,48 @@ body {
 }
 
 .ambient_1 {
-    width: 1328px;
+    width: 1410px;
     height: 644px;
+}
+
+.section_2 {
+    width: 100%;
+    height: 670px;
+    background-color: #fff;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about {
+    width: 900px;
+    height: 273px;
+}
+
+.about_us {
+    font-family: 'Azeret Mono', sans-serif;
+    font-weight: 700;
+    font-size: 17px;
+
+    display: flex;
+    justify-content: center;
+}
+
+.about_us_text {
+    width: 869px;
+    height: 224px;
+    font-family: 'Inter', sans-serif;
+    font-size: 32px;
+    line-height: 44px;
+
+    text-align: center;
+}
+
+/* section 3 */
+
+.section_3 {
+    background-color: #E9E9E3;
+    width: 100%;
+    height: 1000px;
 }
