--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
 /* section 3 */
 
 .section_3 {
-    background-color: #E9E9E3;
+    /* background-color: #E9E9E3;
     width: 100%;
-    height: 1000px;
+    height: 1000px; */
 }
